test/files/neg/warn-unused-privates.check
warn-unused-privates.scala:3: warning: private constructor in class Bippy is never used
  private def this(c: Int) = this(c, c)           // warn
              ^
warn-unused-privates.scala:5: warning: private method boop in class Bippy is never used
  private def boop(x: Int)            = x+a+b     // warn
              ^
warn-unused-privates.scala:7: warning: private val MILLIS2 in class Bippy is never used
  final private val MILLIS2: Int      = 1000      // warn
                    ^
warn-unused-privates.scala:14: warning: private val HEY_INSTANCE in object Bippy is never used
  private val HEY_INSTANCE: Int = 1000    // warn
              ^
warn-unused-privates.scala:15: warning: private val BOOL in object Bippy is never used
  private lazy val BOOL: Boolean = true   // warn
                   ^
warn-unused-privates.scala:37: warning: private val hummer in class Boppy is never used
  private val hummer = "def" // warn
              ^
warn-unused-privates.scala:44: warning: private var v1 in trait Accessors is never used
  private var v1: Int = 0 // warn
              ^
warn-unused-privates.scala:45: warning: private var v2 in trait Accessors is never used
  private var v2: Int = 0 // warn, never set
              ^
warn-unused-privates.scala:46: warning: private var v3 in trait Accessors is never used
  private var v3: Int = 0 // warn, never got
              ^
warn-unused-privates.scala:57: warning: private var s1 in class StableAccessors is never used
  private var s1: Int = 0 // warn
              ^
warn-unused-privates.scala:58: warning: private var s2 in class StableAccessors is never updated: consider using immutable val
  private var s2: Int = 0 // warn, never set
              ^
warn-unused-privates.scala:59: warning: private var s3 in class StableAccessors is never used
  private var s3: Int = 0 // warn, never got
              ^
warn-unused-privates.scala:71: warning: private default argument in trait DefaultArgs is never used
  private def bippy(x1: Int, x2: Int = 10, x3: Int = 15): Int = x1 + x2 + x3
                             ^
warn-unused-privates.scala:71: warning: private default argument in trait DefaultArgs is never used
  private def bippy(x1: Int, x2: Int = 10, x3: Int = 15): Int = x1 + x2 + x3
                                           ^
warn-unused-privates.scala:104: warning: private object Dongo in object Types is never used
  private object Dongo { def f = this } // warn
                 ^
warn-unused-privates.scala:137: warning: private method x_= in class OtherNames is never used
  private def x_=(i: Int): Unit = ()
              ^
warn-unused-privates.scala:138: warning: private method x in class OtherNames is never used
  private def x: Int = 42
              ^
warn-unused-privates.scala:139: warning: private method y_= in class OtherNames is never used
  private def y_=(i: Int): Unit = ()
              ^
warn-unused-privates.scala:105: warning: private class Bar1 in object Types is never used
  private class Bar1 // warn
                ^
warn-unused-privates.scala:107: warning: private type Alias1 in object Types is never used
  private type Alias1 = String // warn
               ^
warn-unused-privates.scala:217: warning: private class for your eyes only in object not even using companion privates is never used
  private implicit class `for your eyes only`(i: Int) {  // warn
                         ^
warn-unused-privates.scala:233: warning: private class D in class nonprivate alias is enclosing is never used
  private class D extends C2   // warn
                ^
warn-unused-privates.scala:98: warning: local var x in method f2 is never updated: consider using immutable val
    var x = 100 // warn about it being a var
        ^
error: No warnings can be incurred under -Xfatal-warnings.
23 warnings found
one error found
